--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,22 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="manifest" href="/manifest.json">
+    <script type="text/javascript">
+      if ('serviceWorker' in navigator) {
+        console.log('Found serviceWorker');
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then((reg) => {
+              registration.onupdatefound = function() {
+                console.log('アップデートがあります！');
+                registration.update();
+              }
+              console.log('Service worker registered.', reg);
+            });
+          });
+      }
+    </script>
   </head>
   <body>
     <noscript>
